--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <img src="./images/pipe.png" class="pipe">
         <img src="./images/telagameover.png" class="telagameover">
         <button class="refresh-button">REINICIAR</button>
-        <span class="pontuacao" contador()> Pontuação: </span>
+        <span> Pontuação: <span id="pontuacao"> </span></span>
+
     </div>
     <footer class="rodape">
         <span>Developed by </span><a href="https://github.com/marcelochaves92"> Marcelo Chaves</a>
